...
    @IBOutlet weak var contentHeight: NSLayoutConstraint!
    @IBOutlet weak var questionCenterY: NSLayoutConstraint!
    @IBOutlet weak var questionViewHeight: NSLayoutConstraint!
    @IBOutlet weak var bannerView: BannerView!
    @IBOutlet weak var adView: UIView!
    @IBOutlet weak var adViewHeight: NSLayoutConstraint!
    @IBOutlet weak var questionLabel: UILabel!
    @IBOutlet weak var scrollView: UIScrollView!
    @IBOutlet weak var collectionView: UICollectionView!
    @IBOutlet weak var constraintQuestionTop: NSLayoutConstraint!
    
    var correctSoundEffect: AVAudioPlayer?
    var incorrectSoundEffect: AVAudioPlayer?
...
